--- a/data/a_pretty_easy_demon.json
+++ b/data/a_pretty_easy_demon.json
@@ -1,1 +1,19 @@
 
+{
+    "id": 94196048,
+    "name": "A Pretty Easy Demon",
+    "author": "truongwf",
+    "creators": ["truongwf"],
+    "verifier": "oli",
+    "verification": "https://www.youtube.com/watch?v=gmQrowpHyhk",
+    "percentToQualify": 50,
+    "password": "idk",
+    "records": [
+        {
+            "user": "oli",
+            "link": "https://www.youtube.com/watch?v=gmQrowpHyhk",
+            "percent": 100,
+            "hz": 60
+        }
+    ]
+}
